src/codegen/tests/snapshots/codegen@let.lt.snap
---
source: src/codegen/mod.rs
assertion_line: 811
expression: ir
input_file: src/codegen/tests/inputs/let.lt
---
- - "fn main() {\n    let x: int = 1\n}\n"
  - "define i32 @main() {\nentry:\n  ret i32 0\n}\n"
- - "\nfn main() {\n    let x: float\n}\n"
  - "define i32 @main() {\nentry:\n  ret i32 0\n}\n"
- - "\nfn main() {\n    let x: bool\n}\n"
  - "define i32 @main() {\nentry:\n  ret i32 0\n}\n"

