src/codegen/tests/snapshots/codegen@unop.input.snap
---
source: src/codegen/mod.rs
assertion_line: 688
expression: ir
input_file: src/codegen/tests/inputs/unop.input
---
- "define i32 @main() {\nentry:\n  %call_test = call i32 @test(i32 -40)\n  ret i32 %call_test\n}\n"

