src/codegen/tests/snapshots/codegen@unop.lt.snap
---
source: src/codegen/mod.rs
assertion_line: 811
expression: ir
input_file: src/codegen/tests/inputs/unop.lt
---
- - "fn test(x: int) -> int {\n    x + 1\n}\n\nfn main() -> int {\n    test(-40)\n}\n"
  - "define i32 @main() {\nentry:\n  %call_test = call i32 @test(i32 -40)\n  ret i32 %call_test\n}\n"

